--- a/src/styles/components/_people-behind.scss
+++ b/src/styles/components/_people-behind.scss
@@ -14,16 +14,16 @@
     color: $text-color-dark;
   }
 
+  &__img-wrp {
+    height: 300px;
+    margin-bottom: 20px;
+  }
+
   &__img {
     object-fit: cover;
     height: inherit;
     width: inherit;
     border-radius: 10px;
-
-    &--wrp {
-      height: 300px;
-      margin-bottom: 20px;
-    }
   }
 
   @media (max-width: 995px) {
@@ -39,7 +39,7 @@
       font-size: 16px;
     }
 
-    &__img--wrp {
+    &__img-wrp {
       height: 180px;
 
       &:first-child {
@@ -53,7 +53,7 @@
   }
 
   @media (max-width: 495px) {
-    &__img--wrp {
+    &__img-wrp {
       height: 80px;
     }
   }
